September 2017 6.1
  - Automatically trim input fields to avoid trailing/leading spaces
  - LAM Pro:
   -> Custom fields: support wildcards in text fields such as $firstname
   -> Custom fields: specify minimum/maximum count for multi-value entries
   -> Custom fields: new type for constant values
  - Fixed bugs:
   -> Password modify page reports error on password change when posixAccount is present for users
   -> Nginx configuration files did not include "fastcgi_param SCRIPT_FILENAME $request_filename;" (193)

20.07.2017 6.0.1
  - Fixed bugs:
   -> Configuration file fills up with empty values
   -> Tool visibility settings

26.06.2017 6.0
  - Support multiple configurations for same account type
  - PHP 7.1 compatibility
  - Courier users and mail aliases
  - Windows: Support unlocking of users with too many failed login attempts
  - Samba 3: added account expiration date to PDF fields
  - LAM Pro:
   -> Custom fields: can be used for file upload
   -> Custom fields: new selection list type that gets options from LDAP search
   -> Kopano support


15.03.2017 5.7
  - 2-factor authentication for admin login and self service with privacyIDEA
  - PDF files use DejaVu serif font for better readability and more supported characters (e.g. Cyrillic)
  - Windows users: the department option now uses attribute "department" instead of "departmentNumber"
  - Updated Debian dependencies
  - Fixed bugs:
   -> Comparison issue prevents saving of values (185)


18.12.2016 5.6
  - New mechanism to replace wildcards in user edit screen. Personal/Unix support more wildcards like "$firstname".
  - Windows: added support for pager, otherPager, mobile, otherMobile, company and proxyAddresses (disabled by default in server profile)
  - Mail routing: enable for groups and allow to add/remove the extension
  - LAM Pro:
   -> Password self reset: support for up to 3 security questions