@@ -1,4 +1,4 @@
-This software is copyright (c) 2003 - 2016 by Roland Gruber
+This software is copyright (c) 2003 - 2017 by Roland Gruber
 
 If you purchased a copy of LDAP Account Manager Pro then the following
 files are licensed under the conditions which you accepted at purchase
