@@ -15,7 +15,7 @@
       <itemizedlist>
         <listitem>
           <para>Apache/Nginx webserver (SSL recommended) with PHP module (PHP
-          (&gt;= 5.4.0) with ldap, gettext, xml, openssl and optional
+          (&gt;= 5.6.0) with ldap, gettext, xml, openssl and optional
           OpenSSL)</para>
         </listitem>
 
@@ -44,7 +44,7 @@
               </listitem>
 
               <listitem>
-                <para>Internet Explorer 9 <emphasis role="bold">(compatibility
+                <para>Internet Explorer 11 <emphasis role="bold">(compatibility
                 mode turned off)</emphasis></para>
               </listitem>
 
